--- a/ATACseq_restore_sensitivity/CDK2i_ATAC_overcomeresist_cistrometoolkit.html
+++ b/ATACseq_restore_sensitivity/CDK2i_ATAC_overcomeresist_cistrometoolkit.html
@@ -9,6 +9,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
+<meta name="author" content="Antonio Ahn" />
 
 
 <title>Cistrome toolkit output figures</title>
@@ -1689,6 +1690,7 @@ div.tocify {
 
 
 <h1 class="title toc-ignore">Cistrome toolkit output figures</h1>
+<h4 class="author">Antonio Ahn</h4>
 
 </div>
 
